--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "defi-aggregator",
+  "name": "swap-aggregator-contracts",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "deploy": "npx hardhat run scripts/deploy.js",
+    "run-node": "npx hardhat node"
   },
   "license": "MIT",
   "devDependencies": {
@@ -12,9 +15,9 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.9.5",
     "@truffle/hdwallet-provider": "^1.5.1",
-    "@types/node": "14.14.35",
     "chai": "^4.3.4",
     "ethers": "^5.7.2",
-    "hardhat": "^2.10.1"
+    "hardhat": "^2.10.1",
+    "dotenv": "^16.3.1"
   }
 }
