--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
     "deploy": "npx hardhat run scripts/deploy.js",
-    "run-node": "npx hardhat node"
+    "start-node": "npx hardhat node"
   },
   "license": "MIT",
   "devDependencies": {
